# gosoom

./: .env.example  .gitignore  .npmrc  README.md  orval.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
_bmad/: config.toml  (+1 more)
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  railway.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 04c24a1c717d_add_users_table.py  217b0b5d93d4_add_messages_table.py  38c2a20deb69_baseline.py  4b715631d65e_add_categories_table.py  a1b2c3d4e5f6_add_chat_rooms_table.py  d7bffeb07473_add_quotes_table.py  e447c8a3f9b7_add_service_requests_table.py  fc7ff3f42acd_add_pro_categories_table.py
apps/api/app/: deps.py  main.py  seed.py
apps/api/app/core/: __init__.py  authz.py  config.py  db.py  exceptions.py  pagination.py  security.py
apps/api/app/models/: __init__.py  base.py  category.py  chat_room.py  message.py  pro_category.py  quote.py  service_request.py  user.py
apps/api/tests/: conftest.py  helpers.py  test_auth_login.py  test_auth_signup.py  test_authz_helper.py  test_categories_list.py  test_chat_messages.py  test_chat_rooms_list.py  test_error_envelope.py  test_health.py  test_pro_categories.py  test_quotes_accept.py  test_quotes_list_for_request.py  test_quotes_my_list.py  test_quotes_reject.py  test_quotes_submit.py  test_rbac_guards.py  test_seed.py  test_seed_categories.py  test_service_requests_create.py  test_service_requests_feed.py  test_service_requests_list_detail.py  test_service_requests_status.py  test_users_me.py
(+158 files in other folders)
