[project]
name = "gosoom-api"
version = "0.0.0"
description = "gosoom нҶөн•© API (FastAPI) вҖ” routerвҶ’serviceвҶ’repository"
requires-python = ">=3.12"
dependencies = [
    # мӣ№ н”„л Ҳмһ„мӣҢнҒ¬
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    # DB м ‘к·ј (async) + л§Ҳмқҙк·ёл Ҳмқҙм…ҳ (Story 1.2)
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    # м„Өм •/кІҖмҰқ
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    # ліҙм•Ҳ: Argon2 н•ҙмӢұ(AR11) + JWT(HS256, AR11)
    "pwdlib[argon2]>=0.2.1",
    "pyjwt>=2.10",
    # UUIDv7 м•ұмёЎ мғқм„ұ (AR4/G4)
    "uuid7>=0.1.0",
    "email-validator>=2.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.9",
]

# uv: мқҙ PCм—җм„ң uvмқҳ managed standalone 3.12 л№Ңл“ңк°Җ мӢӨн–ү л¶Ҳк°Җ(0xC0E90002)лқј
# мӢңмҠӨн…ң м„Өм№ҳ Python(python.org 3.12)мқ„ мҡ°м„  мӮ¬мҡ©н•ҳлҸ„лЎқ к°•м ң (dev/prod лӘЁл‘җ 3.12)
[tool.uv]
python-preference = "only-system"

[tool.ruff]
target-version = "py312"
line-length = 100

# Alembicк°Җ мғқм„ұн•ҳлҠ” л§Ҳмқҙк·ёл Ҳмқҙм…ҳмқҖ н…ңн”ҢлҰҝ import(op/sa)лҘј н•ӯмғҒ нҸ¬н•Ё вҖ” F401 м ңмҷё
[tool.ruff.lint.per-file-ignores]
"alembic/versions/*" = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
